Revision history for XML-Grammar-Fiction.

0.1.2       Thu Apr 29 22:47:04 IDT 2010
        - In the Build.PL - merged 'test_requires' into 'build_requires'. 
        Turns out that 'test_requires' is a Module::Installism.

0.1.1       Tue Apr 27 10:11:00 IDT 2010
        - Made sure XML-Grammar-Screenplay used
        XML::Grammar::Fiction::ConfigData instead of 
        XML::Grammar::Screenplay::ConfigData . This broke the installation
        and tests on the following test reports:
            - http://www.cpantesters.org/cpan/report/7167671
            - http://www.cpantesters.org/cpan/report/7167759
            - http://www.cpantesters.org/cpan/report/7167134
        
0.1.0       Mon Apr 26 19:25:55 IDT 2010
        - Merged in the XML-Grammar-Screenplay into this module.
        - Converted XML-Grammar-Screenplay to a non-procedurally-recursive
        parser.
        - Created some base classes:
            - lib/XML/Grammar/Fiction/FromProto/Parser/LineIterator.pm
            - lib/XML/Grammar/Fiction/FromProto/Parser/XmlIterator.pm
            - lib/XML/Grammar/FictionBase/TagsTree2XML.pm
        - Made XML-Grammar-Screenplay use some of the XML-Grammar-Fiction
        classes instead of having duplicate copies.
        - Add the TODO file.

0.0.4       Sat Mar 13 00:28:52 IST 2010
        - Implemented better error handling and presentation in 
        ::App::FromProto.
            - making use of Exception-Class-based classes.
        - Removed the DOCTYPE from the DocBook/XML output (it was a DocBook
        4-ism).

0.0.3       Fri Nov 27 11:32:05 IST 2009
        - Add the script contrib/docbook-to-fiction-xml-txt.pl .
        - Add delimiting empty lines to a =begin ... =end block to settle
        some versions of t/pod.t
            - Thanks to SREZIC.

0.0.2       Wed Nov 25 11:55:41 IST 2009
        - Various refactorings / code cleanup:
            - removed old methods.
            - got rid of the _with_curr_line() anti-abstrcation.